--- a/Laplacian/siamltexmm/report.tex
+++ b/Laplacian/siamltexmm/report.tex
@@ -48,7 +48,7 @@ L := I - D^{1 \over 2}W D^{1 \over 2}
 \end{equation}
 D is degree matrix defined as the diagnal matrix with degrees $d_1, d_2, \ldots, d_n$, which $d_i$ is defined as followed:
 \begin{equation}
-d_i = \displaystyle\sum_{i \neq j}^{n} w_{ij}
+d_i = \displaystyle\sum_{j \neq i}^{n} w_{ij}
 \end{equation}
 Althought the condition of $i \neq j$ is not emphasized in [1], but this is the condition when I checked scipy.sparse.csgraph.laplacian.\\
 Here is the steps to calculate equation 1.1
@@ -103,6 +103,13 @@ L_{i,j} &= L_{j,i} =  {-w_{i,j} \over \sqrt{d_id_j}} \\
 &= {-1 \over \sqrt{d_id_j}} + {w_{i,j}(d_i+d_j) \over 2(d_id_i)^{3\over 2}}
 \end{aligned}
 \end{equation}
+For position $L_{i,j}$, where $i \neq j$:
+\begin{equation}
+\begin{aligned}
+L_{k,k} &= 1 - {w_{k,k} \over d_k} \quad \text{ , where $k \neq i$, $k \neq j$} \\
+{\partial L_{k,k} \over \partial w_{i,j}} &= {w_{k,k} \over d_k^2}{\partial d_k \over \partial w_{i,j}} = {w_{k,k} \over d_k^2}
+\end{aligned}
+\end{equation}
 For position $L_{i,j}$, where $i = j$:
 \begin{equation}
 \begin{aligned}
@@ -125,20 +132,45 @@ L_{k,j} &= L_{j,k} =  {-w_{j,k} \over \sqrt{d_jd_k}} \\
 {\partial L_{k,j} \over \partial w_{i,j}} &= {\partial L_{j,k} \over \partial w_{i,j}} = {w_{j,k} \over 2\sqrt{d_k}d_j^{3\over2}}
 \end{aligned}
 \end{equation}
-Therefore the generalized results is as followed:
+Therefore the generalized results is as followed:\\
+for $w_{ij}$, where $i \neq j$:
 \begin{equation}
 {\partial L \over \partial w_{i,j}} =
 \begin{cases}
-  {w_{i,j}-d_i \over d_i^2}       & \quad \text{if } i = j \text{, for position (i,j), not-scipy}\\
-  0       & \quad \text{if } i = j \text{, for position (i,j), scipy}\\
-  {-1 \over \sqrt{d_id_j}} + {w_{i,j}(d_i+d_j) \over 2(d_id_i)^{3\over 2}}  & \quad \text{if } i \neq j \text{, for position (i,j) and (j,i)}\\
-  {w_{i,k} \over 2\sqrt{d_k}d_i^{3\over2}} & \quad \text{if } k\neq i \,\&\, k \neq j \text{, for position (i,k) and (k,i)} \\
-  {w_{j,k} \over 2\sqrt{d_k}d_j^{3\over2}} & \quad \text{if } k\neq i \,\&\, k \neq j \text{, for position (k,j) and (j,k)} \\
-  {w_{i,k}-d_i \over d_i^2}       & \quad \text{if } k = i \text{, for position (i,i), not-scipy}\\
-  {w_{j,k}-d_i \over d_j^2}       & \quad \text{if } k = j \text{, for position (j,j), not-scipy}\\
+  {w_{k,k}\over d_k^2}       & \quad \text{, for position $(k,k)$, where $k = i$ or $k = j$, not-scipy}\\
+  0       & \quad \text{, for position $(k,k)$, where $k = i$ or $k = j$, scipy}\\
+  {w_{i,k} \over 2\sqrt{d_k}d_i^{3\over2}}       & \quad \text{, for all position $(i,k), (k,i)$, where $k \neq i$}\\
+  {w_{j,k} \over 2\sqrt{d_k}d_j^{3\over2}}       & \quad \text{, for all position $(j,k), (k,j)$, where $k \neq j$}\\
+  {-1 \over \sqrt{d_id_j}} + {w_{i,j}(d_i+d_j) \over 2(d_id_i)^{3\over 2}}       & \quad \text{, for position $(i ,j), (j, i)$}\\
   0 & \quad \text{for any other position} \\
 \end{cases}
 \end{equation}
+for $w_{ij}$, where $i = j$:
+\begin{equation}
+{\partial L \over \partial w_{i,j}} =
+\begin{cases}
+  {w_{i,j}-d_i \over d_i^2}       & \quad \text{, for position $(k,k)$, where $k = i$ or $k = j$, not-scipy}\\
+  0       & \quad \text{, for position $(k,k)$, where $k = i$ or $k = j$, scipy}\\
+  {w_{i,k} \over 2\sqrt{d_k}d_i^{3\over2}}       & \quad \text{, for all position $(i,k), (k,i)$, where $k \neq i$}\\
+  {w_{j,k} \over 2\sqrt{d_k}d_j^{3\over2}}       & \quad \text{, for all position $(j,k), (k,j)$, where $k \neq j$}\\
+  0 & \quad \text{for any other position} \\
+\end{cases}
+\end{equation}
+
+% Therefore the generalized results is as followed:
+% \begin{equation}
+% {\partial L \over \partial w_{i,j}} =
+% \begin{cases}
+%   {w_{i,j}-d_i \over d_i^2}       & \quad \text{if } i = j \text{, for position (i,j), not-scipy}\\
+%   0       & \quad \text{if } i = j \text{, for position (i,j), scipy}\\
+%   {-1 \over \sqrt{d_id_j}} + {w_{i,j}(d_i+d_j) \over 2(d_id_i)^{3\over 2}}  & \quad \text{if } i \neq j \text{, for position (i,j) and (j,i)}\\
+%   {w_{i,k} \over 2\sqrt{d_k}d_i^{3\over2}} & \quad \text{if } k\neq i \,\&\, k \neq j \text{, for position (i,k) and (k,i)} \\
+%   {w_{j,k} \over 2\sqrt{d_k}d_j^{3\over2}} & \quad \text{if } k\neq i \,\&\, k \neq j \text{, for position (k,j) and (j,k)} \\
+%   {w_{i,k}-d_i \over d_i^2}       & \quad \text{if } k = i \text{, for position (i,i), not-scipy}\\
+%   {w_{j,k}-d_i \over d_j^2}       & \quad \text{if } k = j \text{, for position (j,j), not-scipy}\\
+%   0 & \quad \text{for any other position} \\
+% \end{cases}
+% \end{equation}
 
 
 \begin{thebibliography}{10}
