--- a/model/feature2GaussianMatrix.ipynb
+++ b/model/feature2GaussianMatrix.ipynb
@@ -21,6 +21,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create pseudo-signal\n",
+    "- Since default frequency is 22050, and therefore the cycle for each is 22050 data points"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 114,
    "metadata": {
@@ -52,10 +60,8 @@
     "for i in xrange(20):\n",
     "    if i%2==0:\n",
     "        signal += list(np.random.normal(base, sigma, length))\n",
-    "\n",
     "    else:\n",
     "        signal += list(np.random.normal(-base, sigma, length))\n",
-    "\n",
     "signal = np.array(signal)\n",
     "\n",
     "print signal.shape\n",
@@ -70,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert time signal to feature vector"
+    "# Convert time signal to feature vector"
    ]
   },
   {
@@ -94,6 +100,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Constructing gaussian matrix\n",
+    "-- based on method of w[i,j] = exp(- norm2(x_i-x_j)^2/sigma^2), where x_i, x_j is feature at each time point, sigma is the parameter to learn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {
@@ -113,6 +127,13 @@
     "gm = RM.feature2GaussianMatrix(cqt, 1.5)\n",
     "print gm.shape\n",
     "print \"is symmetric: \", (gm==np.transpose(gm)).all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Laplacian --> Eigenvectors"
    ]
   },
   {
@@ -167,6 +188,14 @@
     "plt.ylabel('Time')\n",
     "plt.xlabel('Time')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Laplacina --> Eigenvectors --> Boundary Detection\n",
+    "-- As there are 20 cycles, and actually 40 signal transitions, boundary detection can get 40 bounday lines"
    ]
   },
   {
@@ -237,16 +266,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 108,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "y, sr = librosa.load(librosa.util.example_audio_file())\n",
-    "tempo, beats = librosa.beat.beat_track(y, sr=sr)\n",
-    "beat_times = librosa.frames_to_time(beats, sr=sr)"
+    "# Frame to time\n",
+    "-- Convert boundary time frame to time"
    ]
   },
   {
