--- a/src/jams.ipynb
+++ b/src/jams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,13 +14,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "j= jams.load(\"../../../jams-data/datasets/SALAMI/2.jams\")"
+    "j= jams.load(\"../data/2.jams\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 0.464399 silence\n",
+      "0.464399 14.379864 intro\n",
+      "14.379864 23.986213 no_function\n",
+      "23.986213 33.622494 no_function\n",
+      "33.622494 42.956916 verse\n",
+      "42.956916 49.68102 no_function\n",
+      "49.68102 67.005941 transition\n",
+      "67.005941 76.881292 pre-chorus\n",
+      "76.881293 86.425397 chorus\n",
+      "86.425397 98.689433 no_function\n",
+      "98.689433 108.166304 verse\n",
+      "108.166304 115.47449 no_function\n",
+      "115.47449 129.466939 transition\n",
+      "129.466939 137.682789 chorus\n",
+      "137.682789 160.601927 no_function\n",
+      "160.601927 167.620181 no_function\n",
+      "167.620181 177.151722 pre-chorus\n",
+      "177.151723 194.691836 chorus\n",
+      "194.691837 242.415329 no_function\n",
+      "242.415329 250.548934 outro\n",
+      "250.548934 263.205419 fade-out\n",
+      "263.20542 264.885216 silence\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in zip(list(j.annotations[0].data.time), list(j.annotations[0].data.time + j.annotations[0].data.duration), j.annotations[0].data.value):\n",
+    "    print  i[0].total_seconds(), i[1].total_seconds(), i[2]\n"
    ]
   },
   {
@@ -68,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +313,7 @@
        "21 00:04:23.205420 00:00:01.679796      silence       None"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -304,13 +345,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0          00:00:00\n",
-      "1   00:00:00.034830\n",
-      "2   00:00:03.776871\n",
-      "3   00:00:51.986395\n",
-      "4   00:05:31.944739\n",
-      "5   00:09:17.366100\n",
-      "6   00:09:46.350726\n",
+      "0           00:00:00\n",
+      "1    00:00:00.464399\n",
+      "2    00:00:14.379864\n",
+      "3    00:00:23.986213\n",
+      "4    00:00:33.622494\n",
+      "5    00:00:42.956916\n",
+      "6    00:00:49.681020\n",
+      "7    00:01:07.005941\n",
+      "8    00:01:16.881293\n",
+      "9    00:01:26.425397\n",
+      "10   00:01:38.689433\n",
+      "11   00:01:48.166304\n",
+      "12   00:01:55.474490\n",
+      "13   00:02:09.466939\n",
+      "14   00:02:17.682789\n",
+      "15   00:02:40.601927\n",
+      "16   00:02:47.620181\n",
+      "17   00:02:57.151723\n",
+      "18   00:03:14.691837\n",
+      "19   00:04:02.415329\n",
+      "20   00:04:10.548934\n",
+      "21   00:04:23.205420\n",
       "Name: time, dtype: timedelta64[ns]\n"
      ]
     }
@@ -321,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -332,13 +388,36 @@
        "<function mir_eval.util.intervals_to_samples>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mir_eval.util.intervals_to_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'total_seconds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-2041252e819e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_seconds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mannotations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'total_seconds' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "map(total_seconds(), j.annotations[0].data.time)"
    ]
   },
   {
