check sigmas symmetric

--- a/model/feature2GaussianMatrix.ipynb
+++ b/model/feature2GaussianMatrix.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +374,7 @@
     "#Convert interval from time to frame\n",
     "def t2f(x):\n",
     "    return librosa.core.time_to_frames(x, sr=22050, hop_length=512, n_fft=None)\n",
-    "allInterval = [[np.apply_along_axis(f2, 0, elm[0]/22050), elm[1]] for elm in allInterval]\n",
+    "allInterval = [[np.apply_along_axis(t2f, 0, elm[0]/22050), elm[1]] for elm in allInterval]\n",
     "print allInterval\n",
     "\n",
     "#Construct recurrence matrix from interval\n",
@@ -439,8 +439,9 @@
     "sigmas = np.random.rand(cqt.shape[0], cqt.shape[0])\n",
     "sigmas = (sigmas + sigmas.T)/2\n",
     "gm = RM.feature2GaussianMatrix(cqt, sigmas)\n",
-    "print gm.shape\n",
-    "print \"is symmetric: \", (gm==np.transpose(gm)).all()"
+    "\n",
+    "L = scipy.sparse.csgraph.laplacian(gm, normed=True)\n",
+    "L_true = scipy.sparse.csgraph.laplacian(m_true, normed=True)"
    ]
   }
  ],
