--- a/model/learnedSigmaToBoundary.ipynb
+++ b/model/learnedSigmaToBoundary.ipynb
@@ -28,8 +28,9 @@
     "# Load signal, true boundary, original sigma, learned sigmas\n",
     "\n",
     "1. signal has been cqt, beat syc\n",
-    "2. true boundary imported from SALAMI, been time2frame conversion, been frame2frame2 conversion\n",
-    "3. sigma is learned by minimize || L_true - L ||_2"
+    "2. true boundary imported and processed from SALAMI, been time2frame conversion, been frame2frame conversion\n",
+    "3. sigma is learned by minimize || L_true - L ||_2\n",
+    "4. the each "
    ]
   },
   {
