--- a/model/learnedSigmaToBoundary.ipynb
+++ b/model/learnedSigmaToBoundary.ipynb
@@ -30,7 +30,7 @@
     "1. signal has been cqt, beat syc\n",
     "2. true boundary imported and processed from SALAMI, been time2frame conversion, been frame2frame conversion\n",
     "3. sigma is learned by minimize || L_true - L ||_2\n",
-    "4. the each "
+    "4. the each differential term and chain rule is confirmed numerically and analytically. "
    ]
   },
   {
